// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn-info"
      type="button"
    >
      Desayuno
    </button>
    <button
      class="btn btn-info "
      type="button"
    >
      Almuerzo y Cena
    </button>
    <button
      class="btn btn-info "
      type="button"
    >
      Acompañamientos
    </button>
    <button
      class="btn btn-info "
      type="button"
    >
      Bebidas
    </button>
    <div>
      <div>
        <div
          class="mt-3 mb-3"
          data-testid="desayuno"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`se deberia renderizar bebidas despues de un click 1`] = `
<DocumentFragment>
  <div
    class="card-header"
  >
    <button
      class="btn btn-info"
      type="button"
    >
      Desayuno
    </button>
    <button
      class="btn btn-info "
      type="button"
    >
      Almuerzo y Cena
    </button>
    <button
      class="btn btn-info "
      type="button"
    >
      Acompañamientos
    </button>
    <button
      class="btn btn-info "
      type="button"
    >
      Bebidas
    </button>
    <div>
      <div>
        <div
          class="row"
          data-testid="desayuno"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
